cleaned up some code x3